# Uam-Bibliography-Processor

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  config.json  main.cpp  references.bib
src/: Config.cpp  Config.h  DoiGeter.cpp  DoiGeter.h  NameValidator.cpp  NameValidator.h  StringUtils.cpp  StringUtils.h
src/api/: Request.cpp  Request.h  UrlBuilder.cpp  UrlBuilder.h
src/doi/: Crossref.cpp  Crossref.h
src/parser/: BibParser.cpp  BibParser.h
src/parser/model/: Bib.cpp  Bib.h  KeyValue.cpp  KeyValue.h
test/: BibParserTest.cpp
test-input/: 1102.tex  1104.tex  1109.tex  1118.tex  1119.tex  1121.tex  1122.tex  1130.tex  1132.tex  833.tex
